# lora_training

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  REAL_RESPONSES.md  debug_raw_response_0.txt  debug_raw_response_1.txt  debug_raw_response_2.txt  pyproject.toml  raw_api_response.txt  requirements.txt
config/: avorion.yaml  base.yaml  gdscript.yaml
data/avorion/: train.jsonl
ideas/: gb10-vllm-optimization.md  qwen3-80b-unified-adapter-plan.md  security.md
scripts/: capture_anthropic_responses.py  convert_vllm.py  debug_json.py  examine_response.py  generate_dataset.py  generate_fixtures.py  json_parser_fix.py  json_utils.py  merge.py  prepare_avorion_dataset.py  prepare_data.py  prompts.py  quality_check.py  test_api_response.py  train.py
tests/: __init__.py  conftest.py  requirements.txt  test_config.py  test_data_processing.py  test_dataset_generation.py  test_deployment.py  test_plan.md  test_real_responses.py  test_training.py
tests/fixtures/anthropic_responses/: avorion_batch_responses.json  error_responses.json  gdscript_batch_responses.json
tests/fixtures/avorion/: entity_system.lua  player_interaction.lua  sector_callbacks.lua  sector_system.lua  sector_template.lua
tests/fixtures/gdscript/: animation_sprite.gd  node_interaction.gd  physics_collision.gd  scene_traversal.gd
tests/utils/: mock_helpers.py
