[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", ".git", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=scripts",
    "--cov=tests",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["scripts", "tests"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*", "*/.venv/*"]

[tool.coverage.report]
fail_under = 80
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[project]
name = "lora-training"
version = "0.1.0"
description = "LoRA fine-tuning pipeline for Qwen models"
requires-python = ">=3.11"

[project.scripts]
quality-check = "scripts.quality_check:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"